# Package_Design_Agent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: config.py  main.py
app/api/: cases.py  chat.py  events.py
app/data/: cases.json  operator_profile.json  tags.json
app/models/: __init__.py  session.py  skill_meta.py
app/services/: data_loader.py  deepseek_client.py  orchestrator.py  session_store.py
app/skills/: __init__.py  base.py  prompt_utils.py  registry.py
app/skills/case_match/: handler.py  skill.yaml
app/skills/competitor_analysis/: handler.py  prompt.md  skill.yaml
app/skills/dispatcher/: handler.py  prompt.md  skill.yaml
app/skills/llm_supplement/: handler.py  prompt.md  skill.yaml
app/skills/self_analysis/: handler.py  prompt.md  skill.yaml
app/skills/socratic/: handler.py  prompt.md  skill.yaml
app/skills/summary/: handler.py  prompt.md  skill.yaml
app/skills/tag_inference/: handler.py  prompt.md  skill.yaml
docs/superpowers/: agent-skill-flow.md
docs/superpowers/plans/: 2026-06-28-operator-package-design-assistant.md
docs/superpowers/specs/: 2026-06-28-operator-package-design-assistant-design.md
static/: app.js  index.html  style.css
tests/: test_api_integration.py  test_case_match.py  test_compute_rerun_set.py  test_data_loader.py  test_deepseek_client.py  test_dispatcher_parsing.py  test_models.py  test_orchestrator_full_run.py  test_orchestrator_partial_run.py  test_prompt_utils.py  test_registry.py  test_session_store.py
